--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 h1{
-    text-align: center
+    text-align: center;
+    color: white
 }
 
 
 .card{
-    width: 100%;
+    width: 50%;
 }
 
 
 body {
-  padding-left: 130px;
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #76b852, #8dc26f); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #76b852, #8dc26f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background-image: url("images/portfolio.gif")
 }
 
 nav {
@@ -45,10 +43,13 @@ nav a i {
     font-size: 36px;
     text-align: center;
     letter-spacing: 6px;
+    padding: 127px;
+    color: white
+    
 }
 
 .about-body {
-    background: lightblue 
+   background-image: url("images/portfolio.gif");
 }
 
 img {
@@ -63,5 +64,30 @@ img {
 }
 
 .about-desc {
-    font-size: 26px
+    font-size: 26px;
+    color: white
+    
+}
+
+h2{
+    color: white
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    background-color: black;
+    margin-left: 74px
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+    color: white;
+    font-size: 18px
+
 }
