--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,101 +1,43 @@
-h1{
-    text-align: center;
-    color: white
-}
+@import 'variables';
 
-
-.card{
-    width: 50%;
-}
-
-
+// GLOBALS
 body {
-    background-image: url("../../images/portfolio.gif");
-    padding: 0 75px 0 150px;
+    background-color: lightblue;
+    transition: all ease 1s;
+    color: white;
+    background-image: url('../../images/explosion.gif');
 }
 
-nav {
-    width: 100px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background-color: black;
-    a {
-        display: block;
-        color: white;
-        text-align: center;
-        text-decoration: none;
-        padding: 10px;
-        &:hover {
-            color: blue;
-            i {
-                -webkit-animation-iteration-count: infinite;
-                animation-iteration-count: infinite;
-                -webkit-animation-duration: 1s;
-                animation-duration: 1s;
-                -webkit-animation-fill-mode: both;
-                animation-fill-mode: both;
-            }
-        }
-    }
-}
-
-nav a i {
-    display: block;
-    width: 100%;
+h1 {
     text-align: center;
-    font-size: 45px;
+    color: #FFFFFF;
+    font-weight: normal;
+    margin: 0 20% 0 20%;
+    background-color: rgba(0,0,0, 0.6);
 }
 
-.about-text {
-    font-size: 36px;
-    text-align: center;
-    letter-spacing: 6px;
-    padding: 127px;
-    color: white
+.blue-title {
+    color: $theme-primary;
 }
 
-.about-body {
-   background-image: url("../../images/portfolio.gif");
+#sub-title {
+    color: white;
 }
 
-img {
+.underline {
+    text-decoration: underline;
+}
+
+form {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 600px;
+}
+
+#profile-picture {
     display: block;
-    margin: auto;
-    border-radius: 50%;
-    height: 300px ;
-     border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
+    margin: 0 auto;
+    border-radius: 100%;
+    height: 200px;
     width: 200px;
 }
-
-.about-desc {
-    font-size: 26px;
-    color: white
-    
-}
-
-h2{
-    color: white
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    background-color: black;
-    margin-left: 74px
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.container {
-    padding: 2px 16px;
-    color: white;
-    font-size: 18px
-}
-    
